[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/buttons/scripts/Tela_inicial.gd" type="Script" id=1]
[ext_resource path="res://fonts/buttons/jogar.tscn" type="PackedScene" id=2]
[ext_resource path="res://fonts/buttons/settings.tscn" type="PackedScene" id=3]
[ext_resource path="res://fonts/buttons/FadeIn.tscn" type="PackedScene" id=4]

[sub_resource type="GDScript" id=1]
script/source = "extends Button

@export var Scene_to_load: String"

[node name="Tela_Inicial" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="menu" type="VBoxContainer" parent="."]
offset_left = 70.0
offset_top = 70.0
offset_right = 1200.0
offset_bottom = 650.0

[node name="CenterRow" type="HBoxContainer" parent="menu"]
offset_right = 1130.0
offset_bottom = 580.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="buttons" type="VBoxContainer" parent="menu/CenterRow"]
offset_right = 563.0
offset_bottom = 580.0
clip_contents = true
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="jogar" parent="menu/CenterRow/buttons" instance=ExtResource( 2 )]
offset_left = 0.0
offset_top = 228.0
offset_right = 563.0
offset_bottom = 288.0
custom_minimum_size = Vector2( 360, 60 )

[node name="settings" parent="menu/CenterRow/buttons" instance=ExtResource( 3 )]
offset_left = 0.0
offset_top = 292.0
offset_right = 563.0
offset_bottom = 352.0
custom_minimum_size = Vector2( 360, 60 )
script = SubResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="menu/CenterRow"]
offset_left = 567.0
offset_right = 1130.0
offset_bottom = 580.0
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="menu/CenterRow/CenterContainer"]
offset_left = 281.0
offset_top = 290.0
offset_right = 281.0
offset_bottom = 290.0

[node name="FadeIn" parent="." instance=ExtResource( 4 )]
visible = false

[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
